Bug 138111 - FAILESAVE: Style “A0" in Draw is not retained (changed to "A4") after save and reopen
Summary: FAILESAVE: Style “A0" in Draw is not retained (changed to "A4") after save an...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Kevin Suo
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: dataLoss, implementationError
Depends on:
Blocks: ImpressDraw-Styles
  Show dependency treegraph
 
Reported: 2020-11-10 12:08 UTC by Kevin Suo
Modified: 2022-11-22 20:20 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2020-11-10 12:08:48 UTC
Steps to Reproduce:

1. New Draw, hit F2 and type in "ABC";
2. Apply Text:A0 style;
3. Saved and reopen.

Actual Result:
Style for "ABC" changed to A4.

Expected Result:
Style should be A0 upon save and reopen.

Version: 6.4.6.7 release
and 2011-11-08's master.
Fedora 32 gtk3.
Comment 1 Roman Kuznetsov 2020-11-11 22:36:17 UTC
repro in 6.4 and in 6.2 on Windows

It looks as an implementation error, because there are no that styles for text in 6.1 

Heiko, Andreas do you remember who realized it?
Comment 2 Heiko Tietze 2020-11-12 07:49:14 UTC
A0 was introduced by me for bug 94369.

But I cannot reproduce the issue. Text box, style (Text A4 or Heading A0), save-reload = style is applied as expected. Did you really select either all text or the whole text box?

Version: 6.4.7.2
Build ID: 6.4.7-2
CPU threads: 8; OS: Linux 5.9; UI render: default; VCL: kf5; 
Locale: de-DE (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Roman Kuznetsov 2020-11-15 16:51:03 UTC
(In reply to Heiko Tietze from comment #2)
> A0 was introduced by me for bug 94369.
> 
> But I cannot reproduce the issue. Text box, style (Text A4 or Heading A0),
> save-reload = style is applied as expected. Did you really select either all
> text or the whole text box?
> 

whole text box, because we apply a drawing style to box!
Comment 4 Heiko Tietze 2020-11-16 08:30:44 UTC
Still unconfirmed. Xisco, your wisdom is needed.
Comment 5 Kevin Suo 2020-11-16 08:42:47 UTC
(In reply to Heiko Tietze from comment #2)

It's style "A0" (i.e., the parent of Heading A0), not "Heading A0".
Comment 6 QA Administrators 2022-11-17 03:46:25 UTC Comment hidden (obsolete)
Comment 7 Kevin Suo 2022-11-17 03:59:44 UTC
Still reproducible on current 7.4 branch.

1. New Draw, hit F2, click anywhere on the page, and type in "ABC", exit editing by clicking anywhere else.
2. Click on the text frame "ABC", go to sidebar and expand the style named "Text", you see a style named "A0". Double-click on this "A0" style to apply it to the text frame.
3. Saved and reopen.

--> The style applied to the text frame becomes "A4" rather than "A0".
Comment 8 Kevin Suo 2022-11-17 04:17:14 UTC
https://gerrit.libreoffice.org/c/core/+/142819
Comment 9 Commit Notification 2022-11-22 13:55:51 UTC
Kevin Suo committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f078937179c4490df273b95cc8c29a216f9184ba

tdf#138111: Fix apparent copy-paste error in ApiNameMap for sd style "A0"

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2022-11-22 20:20:29 UTC
Kevin Suo committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/349d682cb03cab54f06fa7a014884368df0e9fba

tdf#138111: Fix apparent copy-paste error in ApiNameMap for sd style "A0"

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.