tdf#138111: Fix apparent copy-paste error in ApiNameMap for sd style "A0"

As introduced in commit 99102d4263189d347c7a7d0df8fd782e8c4c8ad5.

Change-Id: Iece8595a401df7bd5a514244d4a4fc825a49f9de
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142819
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>